[package]
name = "reproducibility-automation"
version = "1.0.0"
edition = "2021"

[dependencies]
rusqlite = "0.33.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.29", features = ["full"] }
reqwest = { "version"= "0.12.12",  features = ["json"] }
axum = { version = "0.8.1", features = ["multipart"] }
futures = "0.3.31"
tokio-util = "0.7.14"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
bytes = "1.10.1"
clap = { version = "4.5.39", features = ["derive", "string"] }
libsystemd = "0.7.2"
prometheus-client = "0.23.1"
tokio-metrics = "0.4.3"
