[package]
authors = ["Noi0103"]
name = "linchpin"
description = "Daemon to rebuild derivations and find non-reproducible derivations."
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Noi0103/linchpin"

[dependencies]
rusqlite = "0.33.0"
serde = { version = "1.0.217", features = ["derive", "alloc"] }
serde_json = "1.0.137"
tokio = { version = "1.29", features = ["full"] }
reqwest = { "version" = "0.12.12", features = ["json", "multipart"] }
axum = { version = "0.8.1", features = ["multipart"] }
futures = "0.3.31"
tokio-util = "0.7.14"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
bytes = "1.10.1"
clap = { version = "4.5.39", features = ["derive", "string"] }
libsystemd = "0.7.2"
prometheus-client = "0.23.1"
tokio-metrics = "0.4.3"
log = "0.4.29"
typetag = "0.2.21"
anyhow = "1.0.100"
tracing-log = { version = "0.2.0", default-features = false, features = [
  "std",
] }
nix-daemon = "0.1.1"
